load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "elements",
    srcs = ["elements.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/elements",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/api/external-api/v1/proto:external_proto",
        "//internal/storage/local/common",
    ],
)
