load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "elements",
    srcs = ["elements.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/elements",
    visibility = ["//visibility:public"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage/local/common",
    ],
)
