load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "maps",
    srcs = ["maps.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/maps",
    visibility = ["//visibility:public"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage/local/common",
    ],
)
