load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pcs",
    srcs = ["pcs.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/pcs",
    visibility = ["//visibility:public"],
    deps = [
        "//hide-seek-server/internal/api/external-api/v1/proto",
        "//hide-seek-server/internal/storage/local/common",
    ],
)
