load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "weapons",
    srcs = ["weapons.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/weapons",
    visibility = ["//visibility:public"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage/local/common",
    ],
)
