load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worlds",
    srcs = ["worlds.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/local/worlds",
    visibility = ["//visibility:public"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage/local/common",
    ],
)
