load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "implementation",
    srcs = ["implementation.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/api/external-api/v1/implementation",
    visibility = ["//:__pkg__"],
    deps = [
        "//internal/api/external-api/v1/proto",
        "//internal/storage",
        "//tools/utils",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)

go_test(
    name = "implementation_test",
    srcs = ["implementation_test.go"],
    embed = [":implementation"],
    deps = ["@com_github_franela_goblin//:goblin"],
)
