load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "external_implementation",
    srcs = ["implementation.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/api/external-api/v1/implementation",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api:external_api",  # keep
        "//internal/storage",
        "//tools/utils",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    ],
)

go_test(
    name = "implementation_test",
    srcs = ["implementation_test.go"],
    embed = [":implementation"],
    deps = ["@com_github_franela_goblin//:goblin"],
)
