load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal_implementation",
    srcs = ["implementation.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/api/internal-api/v1/implementation",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "implementation_test",
    srcs = ["implementation_test.go"],
    embed = [":implementation"],
    deps = ["@com_github_franela_goblin//:goblin"],
)
