load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "collection_manager",
    srcs = ["collection_manager.go"],
    importpath = "github.com/YarikRevich/HideSeek-Server/internal/storage/db/provider/collection_manager",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
    ],
)
