load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "collection_manager",
    srcs = ["collection_manager.go"],
    importpath = "github.com/YarikRevich/hide-seek-server/internal/storage/db/provider/collection_manager",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
